Fixed horizontal scroll bug

--- a/mobile.css
+++ b/mobile.css
@@ -2,8 +2,7 @@
 
 /* over all starts */
 *{
-    padding: 0;
-    margin: 0;
+    margin: auto;
     box-sizing: border-box;
 }
 html{
@@ -24,7 +23,7 @@ a{
     justify-content: space-between;
 }
 #hamburger{
-    margin: 20px 260px;
+    margin: 20px 250px;
     display: none;
     cursor: pointer;
 }
@@ -95,9 +94,7 @@ a{
 
 /* root contailers starts */
 #root .container{
-    margin-left: 4%;
-    margin-top: 42%;
-    margin-bottom: 0%;
+    margin: auto;
 }
 #services .container{
     min-height: 100vh;
@@ -158,20 +155,22 @@ a{
 /* name starts */
 #root #name{
     position: absolute;
+    top: 200px;
+    right: 20%
 }
 /* name ends */
 
 /* image starts */
 #image{
-    width: 45%;
-    height: 60%;
-    position: absolute;
-    bottom: 0px;
+    left: 0;
+    width: auto;
+    height: 65%;
+    bottom: 30px;
 }
 #image img{
     height: 100%;
     position: absolute;
-    left: 48%;
+    right: 0;
     bottom: 0;
     transform: translate(-50%);
     transition: bottom 1s, left 1s;
